[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/add.png" type="Texture" id=1]
[ext_resource path="res://Main Theme.tres" type="Theme" id=2]
[ext_resource path="res://Textures/SVGs/remove.svg" type="Texture" id=3]
[ext_resource path="res://Scrips/Main.gd" type="Script" id=4]
[ext_resource path="res://Textures/SVGs/import.svg" type="Texture" id=5]

[sub_resource type="InputEventKey" id=4]
control = true
command = true
scancode = 78

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 4 )

[sub_resource type="InputEventKey" id=3]
scancode = 16777224

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 3 )

[node name="MainPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 4
split_offset = 810

[node name="Background" type="ColorRect" parent="HSplitContainer"]
margin_right = 810.0
margin_bottom = 600.0
color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="RecipeList" type="ItemList" parent="HSplitContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
fixed_icon_size = Vector2( 48, 48 )

[node name="Sidebar" type="ColorRect" parent="HSplitContainer"]
margin_left = 818.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 188, 0 )
color = Color( 0.203922, 0.203922, 0.203922, 1 )

[node name="AddRecipe" type="Button" parent="HSplitContainer/Sidebar"]
anchor_right = 1.0
margin_left = 8.5
margin_top = 13.0
margin_right = -8.5
margin_bottom = 51.0
hint_tooltip = "Adds a new Recipe"
theme = ExtResource( 2 )
action_mode = 0
shortcut = SubResource( 5 )
text = "New Recipe"
icon = ExtResource( 1 )
clip_text = true
expand_icon = true

[node name="ImportRecipe" type="Button" parent="HSplitContainer/Sidebar"]
anchor_right = 1.0
margin_left = 8.5
margin_top = 58.0
margin_right = -8.5
margin_bottom = 96.0
hint_tooltip = "Adds a new Recipe"
theme = ExtResource( 2 )
action_mode = 0
shortcut = SubResource( 8 )
text = "Import Recipe"
icon = ExtResource( 5 )
clip_text = true
expand_icon = true

[node name="RemoveRecipe" type="Button" parent="HSplitContainer/Sidebar"]
anchor_right = 1.0
margin_left = 8.5
margin_top = 107.0
margin_right = -8.5
margin_bottom = 145.0
hint_tooltip = "Removes the selected Recipe"
theme = ExtResource( 2 )
disabled = true
action_mode = 0
shortcut = SubResource( 2 )
text = "Remove Recipe"
icon = ExtResource( 3 )
clip_text = true
expand_icon = true

[node name="RecipePanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -305.0
margin_top = -182.0
margin_right = 305.0
margin_bottom = 182.0

[node name="Title" type="Label" parent="RecipePanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -69.0
margin_top = -29.0
margin_right = 69.0
margin_bottom = -9.0
theme = ExtResource( 2 )
text = "New Recipe"
align = 1
autowrap = true

[node name="RecipeName" type="LineEdit" parent="RecipePanel"]
anchor_right = 1.0
margin_left = 18.0
margin_top = 12.0
margin_right = -18.0
margin_bottom = 45.0
theme = ExtResource( 2 )
placeholder_text = "Name your recipe"

[node name="Ingredients" type="Label" parent="RecipePanel"]
margin_left = 36.0
margin_top = 51.0
margin_right = 130.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "Ingredients"

[node name="TextEdit" type="TextEdit" parent="RecipePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.0
margin_top = -107.0
margin_right = 287.0
margin_bottom = 129.0

[node name="Cancel" type="Button" parent="RecipePanel"]
margin_left = 90.0
margin_top = 321.0
margin_right = 241.0
margin_bottom = 355.0
theme = ExtResource( 2 )
text = "Cancel"

[node name="Done" type="Button" parent="RecipePanel"]
margin_left = 381.0
margin_top = 321.0
margin_right = 522.0
margin_bottom = 355.0
theme = ExtResource( 2 )
text = "Done"
